--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -2,7 +2,7 @@
 <li><%= link_to 'About', page_path('about') %></li>
 <p class="navbar-text pull-right">
 <% if user_signed_in? %>
+  <%= link_to 'bills', bills_path, :class => 'navbar-link' %> |
   Logged in as <strong><%= current_user.email %></strong>.
-  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
 <% end %>
