--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= bill.total %></td>
         <td><%= link_to 'Show', bill %></td>
         <td><%= link_to 'Edit', edit_bill_path(bill) %></td>
-        <td><%= link_to 'Destroy', bill, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', bill, method: :delete, data: { confirm: 'Are you sure you want to destroy the Bill?' } %></td>
       </tr>
     <% end %>
   </tbody>
