--- a/app/views/bills/edit.html.erb
+++ b/app/views/bills/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @bill %> |
-<%= link_to 'Back', bills_path %>
+<%= link_to 'Show', @bill, class: "btn btn-warning btn-xs active" %>
+<%#= link_to 'Back', bills_path %>
