--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -15,5 +15,5 @@
   <%= @bill.total %>
 </p>
 
-<%= link_to 'Edit', edit_bill_path(@bill),  class: "btn btn-primary" %> |
-<%= link_to 'Back', bills_path, class: "btn btn-primary"  %>
+<%= link_to 'Edit', edit_bill_path(@bill),  class: "btn btn-warning btn-xs active" %> |
+<%= link_to 'Back', bills_path, class: "btn btn-primary btn-xs active"  %>
