--- a/app/views/bills/_form.html.erb
+++ b/app/views/bills/_form.html.erb
@@ -24,6 +24,7 @@
     <%= f.text_field :total, class: 'form-control', placeholder: 'Amount spent' %>
   </div>
   <div class="actions">
-    <%= f.submit class: "btn btn-default" %>
+    <%= f.submit class: "btn btn-success btn-xs active" %>
+    <%= link_to 'Back', bills_path, class: "btn btn-primary btn-xs active" %>
   </div>
 <% end %>
