--- a/app/views/bills/new.html.erb
+++ b/app/views/bills/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', bills_path %>
+<%#= link_to 'Back', bills_path, class: "btn btn-primary btn-small active" %>
