cleaned table, added buttons, formatted amount etc.

--- a/app/views/bills/_form.html.erb
+++ b/app/views/bills/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="form-group">
     <%= f.label :total %><br>
-    <%= f.text_field :total, class: 'form-control', placeholder: 'Amount spent' %>
+    <%= f.number_field :total, class: 'form-control', placeholder: 'Amount spent' %>
   </div>
   <div class="actions">
     <%= f.submit class: "btn btn-success btn-xs active" %>
