--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -1,24 +1,24 @@
 <h1>Listing bills</h1>
 
-<table class="table table-bordered table-striped" >
+<table class="table table-bordered table-striped table-condensed" >
   <thead>
     <tr class="table info">
-      <th align="centre">Store</th>
-      <th>Bought on</th>
-      <th>Total</th>
-      <th colspan="3" align="" >Action</th>
+      <th> <div align="center"> Store </th>
+      <th> <div align="center"> Bought on </th>
+      <th> <div align="center"> Total </th>
+      <th colspan="3"> <div align="center"> Action </th>
     </tr>
   </thead>
 
   <tbody>
     <% @bills.each do |bill| %>
       <tr>
-        <td><%= bill.store %></td>
-        <td><%= bill.bought_on %></td>
-        <td><%= bill.total %></td>
-        <td><%= link_to 'Show', bill %></td>
-        <td><%= link_to 'Edit', edit_bill_path(bill) %></td>
-        <td><%= link_to 'Destroy', bill, method: :delete, data: { confirm: 'Are you sure you want to destroy the Bill?' } %></td>
+        <td><%= bill.store.upcase %></td>
+        <td> <div align="center"> <%= bill.bought_on.strftime("%b-%d-%Y") %></td>
+        <td> <div align="right"> <%= number_to_currency(bill.total) %></td>
+        <td> <div align="center"> <%= link_to 'Show', bill, class: "btn btn-info active btn-xs" %></td>
+        <td> <div align="center"> <%= link_to 'Edit', edit_bill_path(bill), class: "btn btn-warning active btn-xs" %></td>
+        <td> <div align="center"> <%= link_to 'Destroy', bill, method: :delete, data: { confirm: 'Are you sure you want to destroy the Bill?' }, class: "btn btn-danger active btn-xs" %></td>
       </tr>
     <% end %>
   </tbody>
