modified format of date to day, month, year in new, edit, show and index

--- a/app/views/bills/_form.html.erb
+++ b/app/views/bills/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="form-group">
     <%= f.label :bought_on %><br>
-    <%= f.date_select :bought_on %>
+    <%= f.date_select :bought_on, order: [:day, :month, :year] %>
   </div>
   <div class="form-group">
     <%= f.label :total %><br>
