--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+
 
 <p>
   <strong>Store:</strong>
@@ -15,5 +15,5 @@
   <%= number_to_currency(@bill.total) %>
 </p>
 
-<%= link_to 'Edit', edit_bill_path(@bill),  class: "btn btn-warning btn-xs active" %> |
+<%= link_to 'Edit', edit_bill_path(@bill),  class: "btn btn-warning btn-xs active" %> 
 <%= link_to 'Back', bills_path, class: "btn btn-primary btn-xs active"  %>
