--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Listing bills</h1>
+<h1>Listing bills <%= link_to 'New Bill', new_bill_path, class: "btn btn-success active btn-small" %> </h1>
+<% a = current_user.bills.count + 1 %>
 
 <table class="table table-bordered table-striped table-condensed ">
   <thead>
@@ -22,10 +23,10 @@
   </thead>
 
   <tbody>
-  <% @bills.each_with_index(1) do |bill, index| %>
+  <% @bills.each do |bill| %>
       <tr>
         <td>
-          <div align="right"> <%= index %>
+          <div align="right"> <%= a -= 1 %>
         </td>
         <td> <%= bill.store.upcase %></td>
         <td>
@@ -48,6 +49,3 @@
 
 </table>
 
-<br>
-
-<%= link_to 'New Bill', new_bill_path, class: "btn btn-success active btn-xs" %>
