--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -15,5 +15,6 @@
   <%= number_to_currency(@bill.total) %>
 </p>
 
-<%= link_to 'Edit', edit_bill_path(@bill),  class: "btn btn-warning btn-xs active" %> 
+<%= link_to 'Edit', edit_bill_path(@bill),  class: "btn btn-warning btn-xs active" %>
+<%= link_to 'Destroy', bill_path(@bill) , method: :delete, data: {confirm: 'Are you sure you want to destroy the Bill?'}, class: "btn btn-danger active btn-xs" %>
 <%= link_to 'Back', bills_path, class: "btn btn-primary btn-xs active"  %>
