modified table view

--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -35,7 +35,7 @@
         </td>
       </tr>
   <% end %>
-  <td class="table info" colspan="4">
+  <td class="warning" colspan="4">
     <div align="right"> Total is <strong> <%= number_to_currency(@amount) %> </strong> </div>
   </td>
   </tbody>
