--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -25,7 +25,7 @@
         <td>
           <div align="right"> <%= link_to a -= 1, bill %> </div>
         </td>
-        <td> <%= link_to bill.store.upcase, bill %>
+        <td> <%= link_to bill.store, bill %>
         </td>
         <td>
           <div align="center"> <%= link_to bill.bought_on.strftime("%d-%b-%Y"), bill %> </div>
