--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Listing bills <%= link_to 'New Bill', new_bill_path, class: "btn btn-success active btn-small" %> </h1>
-<% a = current_user.bills.count + 1 %>
+<% a = 0 %>
 
 <table class="table table-bordered table-striped table-condensed table-responsive">
   <thead>
@@ -23,15 +23,15 @@
   <% @bills.each do |bill| %>
       <tr>
         <td>
-          <div align="right"> <%= link_to a -= 1, bill %> </div>
+          <div align="right"> <%= a += 1 %> </div>
         </td>
-        <td> <%= link_to bill.store, bill %>
-        </td>
-        <td>
-          <div align="center"> <%= link_to bill.bought_on.strftime("%d-%b-%Y"), bill %> </div>
+        <td> <%= link_to bill.store.upcase, bill %>
         </td>
         <td>
-          <div align="right"> <%= link_to number_to_currency(bill.total), bill %> </div>
+          <div align="center"> <%= bill.bought_on.strftime("%d-%b-%Y") %> </div>
+        </td>
+        <td>
+          <div align="right"> <%= number_to_currency(bill.total) %> </div>
         </td>
       </tr>
   <% end %>
